deepview-rt-sys/deepview-rt.h


#define NN_CONTEXT_SIZEOF 512
typedef enum {
    NN_SUCCESS = 0,
    NN_ERROR_INTERNAL,
    NN_ERROR_INVALID_HANDLE,
    NN_ERROR_OUT_OF_MEMORY,
    NN_ERROR_OUT_OF_RESOURCES,
    NN_ERROR_NOT_IMPLEMENTED,
    NN_ERROR_INVALID_PARAMETER,
    NN_ERROR_TYPE_MISMATCH,
    NN_ERROR_SHAPE_MISMATCH,
    NN_ERROR_INVALID_SHAPE,
    NN_ERROR_INVALID_ORDER,
    NN_ERROR_INVALID_AXIS,
    NN_ERROR_MISSING_RESOURCE,
    NN_ERROR_INVALID_ENGINE,
    NN_ERROR_TENSOR_NO_DATA,
    NN_ERROR_KERNEL_MISSING,
    NN_ERROR_TENSOR_TYPE_UNSUPPORTED,
    NN_ERROR_TOO_MANY_INPUTS,
    NN_ERROR_SYSTEM_ERROR,
    NN_ERROR_INVALID_LAYER,
    NN_ERROR_MODEL_INVALID,
    NN_ERROR_MODEL_MISSING,
    NN_ERROR_STRING_TOO_LARGE,
    NN_ERROR_INVALID_QUANT,
    NN_ERROR_MODEL_GRAPH_FAILED,
    NN_ERROR_GRAPH_VERIFY_FAILED,
} NNError;
typedef struct nn_engine NNEngine;
typedef struct nn_tensor NNTensor;
typedef void NNModel;
typedef void NNModelResource;
typedef void NNModelParameter;
typedef struct nn_context NNContext;
typedef void(nn_aux_object_free)(NNTensor* tensor);
NN_AVAILABLE_SINCE_2_0
NN_API
size_t
nn_model_cache_optimum_size(const NNModel* model);
NN_AVAILABLE_SINCE_2_4
NN_API
size_t
nn_model_resource_count(const NNModel* model);
NN_AVAILABLE_SINCE_2_4
NN_API
const NNModelResource*
nn_model_resource_at(const NNModel* model, size_t index);
NN_AVAILABLE_SINCE_2_4
NN_API
const NNModelResource*
nn_model_resource(const NNModel* model, const char* name);
NN_AVAILABLE_SINCE_2_4
NN_API
const int32_t*
nn_model_parameter_shape(const NNModelParameter* parameter, size_t* n_dims);
NN_AVAILABLE_SINCE_2_4
NN_API
const float*
nn_model_parameter_data_f32(const NNModelParameter* parameter, size_t* length);
NN_AVAILABLE_SINCE_2_4
NN_API
const int32_t*
nn_model_parameter_data_i32(const NNModelParameter* parameter, size_t* length);
NN_AVAILABLE_SINCE_2_4
NN_API
const int16_t*
nn_model_parameter_data_i16(const NNModelParameter* parameter, size_t* length);
NN_AVAILABLE_SINCE_2_4
NN_API
const int8_t*
nn_model_parameter_data_i8(const NNModelParameter* parameter, size_t* length);
NN_AVAILABLE_SINCE_2_4
NN_API
const uint8_t*
nn_model_parameter_data_raw(const NNModelParameter* parameter, size_t* length);
NN_AVAILABLE_SINCE_2_4
NN_API
const char*
nn_model_parameter_data_str(const NNModelParameter* parameter, size_t index);
NN_AVAILABLE_SINCE_2_4
NN_API
size_t
nn_model_parameter_data_str_len(const NNModelParameter* parameter);
NN_AVAILABLE_SINCE_2_4
NN_API
const char*
nn_model_resource_name(const NNModelResource* resource);
NN_AVAILABLE_SINCE_2_4
NN_API
const char*
nn_model_resource_meta(const NNModelResource* resource);
NN_AVAILABLE_SINCE_2_4
NN_API
const char*
nn_model_resource_mime(const NNModelResource* resource);
NN_AVAILABLE_SINCE_2_4
NN_API
const uint8_t*
nn_model_resource_data(const NNModelResource* resource, size_t* data_size);
NN_AVAILABLE_SINCE_2_0
NN_API
size_t
nn_context_sizeof();
NN_AVAILABLE_SINCE_2_0
NN_API
NNContext*
nn_context_init(NNEngine* engine,
                size_t    memory_size,
                void*     memory,
                size_t    cache_size,
                void*     cache);
NN_API
NNContext*
nn_context_init_ex(void*     context_memory,
                   NNEngine* engine,
                   size_t    memory_size,
                   void*     memory,
                   size_t    cache_size,
                   void*     cache);
NN_AVAILABLE_SINCE_2_0
NN_API
void
nn_context_release(NNContext* context);
typedef NNError(nn_user_ops)(NNContext*  context,
                             const char* opname,
                             size_t      index);
NN_AVAILABLE_SINCE_2_4
NN_API
NNError
nn_context_user_ops_register(NNContext* context, nn_user_ops* callback);
NN_AVAILABLE_SINCE_2_4
NN_API
nn_user_ops*
nn_context_user_ops(NNContext* context);
NN_AVAILABLE_SINCE_2_2
NN_API
NNTensor*
nn_context_cache(NNContext* context);
NN_AVAILABLE_SINCE_2_2
NN_API
NNTensor*
nn_context_mempool(NNContext* context);
NN_AVAILABLE_SINCE_2_0
NN_API
NNEngine*
nn_context_engine(NNContext* context);
NN_AVAILABLE_SINCE_2_0
NN_API
const NNModel*
nn_context_model(NNContext* context);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_context_model_load(NNContext*  context,
                      size_t      memory_size,
                      const void* memory);
NN_AVAILABLE_SINCE_2_0
NN_API
void
nn_context_model_unload(NNContext* context);
NN_AVAILABLE_SINCE_2_0
NN_API
NNTensor*
nn_context_tensor(NNContext* context, const char* name);
NN_AVAILABLE_SINCE_2_0
NN_API
NNTensor*
nn_context_tensor_index(NNContext* context, size_t index);
NN_AVAILABLE_SINCE_2_0
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_context_run(NNContext* context);
NN_AVAILABLE_SINCE_2_3
NN_WARN_UNUSED_RESULT
NN_API
NNError
nn_context_step(NNContext* context, size_t index);
NN_API
void
nn_free(void* ptr);
NN_API
void*
nn_malloc(size_t size);