deepviewrt-sys/src/ffi.rs

extern "C" {
    #[doc = " Returns the optimum cache size of a given model object.\n\n @public @memberof NNModel\n @since 2.0"]
    pub fn nn_model_cache_optimum_size(model: *const NNModel) -> usize;
}
extern "C" {
    #[doc = " The number of resources defined in the model.\n\n @param model pointer to the RTM model\n\n @returns number of resources defined in the model.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_resource_count(model: *const NNModel) -> usize;
}
extern "C" {
    #[doc = " Retrieves a reference to the resource at the provided index.\n\n @param model pointer to the RTM model\n @param index resource index\n\n @returns an @ref NNModelResource pointer for the provided @p index in the\n given model.\n @returns NULL if either the model or index are invalid.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_resource_at(model: *const NNModel, index: usize) -> *const NNModelResource;
}
extern "C" {
    #[doc = " Retrieves a reference to the resource with the given name.\n\n @param model pointer to the RTM model\n @param name the unique name of the resource\n\n @returns an @ref NNModelResource pointer for the provided unique @p name.\n @returns NULL if either the @p model or @p name are invalid, NULL, or the\n  @p name is not found.\n\n @public @memberof NNModel\n @since 2.4"]
    pub fn nn_model_resource(
        model: *const NNModel,
        name: *const ::std::os::raw::c_char,
    ) -> *const NNModelResource;
}
extern "C" {
    #[doc = " Returns the shape of the parameter data or NULL if no shape was defined.  If\n n_dims is non-NULL the number of dimensions will be stored there.  The shape\n attribute is not required for parameters but can be used either on its own\n or as part of defining layout of data attributes.\n\n @public @memberof NNModelParameter\n @since 2.4"]
    pub fn nn_model_parameter_shape(
        parameter: *const NNModelParameter,
        n_dims: *mut usize,
    ) -> *const i32;
}
extern "C" {
    #[doc = " Returns parameter float data, length of the array is optionally stored into\n the length parameter if non-NULL.\n\n If parameter does not have this data type, then NULL is returned.\n\n @public @memberof NNModelParameter\n @since 2.4"]
    pub fn nn_model_parameter_data_f32(
        parameter: *const NNModelParameter,
        length: *mut usize,
    ) -> *const f32;
}
extern "C" {
    #[doc = " Returns parameter int32_t data, length of the array is optionally stored into\n the length parameter if non-NULL.\n\n If parameter does not have this data type, then NULL is returned.\n\n @public @memberof NNModelParameter\n @since 2.4"]
    pub fn nn_model_parameter_data_i32(
        parameter: *const NNModelParameter,
        length: *mut usize,
    ) -> *const i32;
}
extern "C" {
    #[doc = " Returns parameter int16_t data, length of the array is optionally stored into\n the length parameter if non-NULL.\n\n If parameter does not have this data type, then NULL is returned.\n\n @public @memberof NNModelParameter\n @since 2.4"]
    pub fn nn_model_parameter_data_i16(
        parameter: *const NNModelParameter,
        length: *mut usize,
    ) -> *const i16;
}
extern "C" {
    #[doc = " Returns parameter int8_t data, length of the array is optionally stored into\n the length parameter if non-NULL.\n\n If parameter does not have this data type, then NULL is returned.\n\n @public @memberof NNModelParameter\n @since 2.4"]
    pub fn nn_model_parameter_data_i8(
        parameter: *const NNModelParameter,
        length: *mut usize,
    ) -> *const i8;
}
extern "C" {
    #[doc = " Returns parameter raw data pointer, length of the array is optionally stored\n into the length parameter if non-NULL.\n\n If parameter does not have this data type, then NULL is returned.\n\n @public @memberof NNModelParameter\n @since 2.4"]
    pub fn nn_model_parameter_data_raw(
        parameter: *const NNModelParameter,
        length: *mut usize,
    ) -> *const u8;
}
extern "C" {
    #[doc = " Returns parameter string data at desired index.  This data handler is\n different from the others which return the array as strings are themselves\n arrays and need special handling. Refer to @ref\n nn_model_parameter_data_str_len() to query the size of the data_str array,\n which refers to the number of strings in this parameter.\n\n @public @memberof NNModelParameter\n @since 2.4"]
    pub fn nn_model_parameter_data_str(
        parameter: *const NNModelParameter,
        index: usize,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the number of strings in the parameter's data_str attribute.\n\n @public @memberof NNModelParameter\n @since 2.4"]
    pub fn nn_model_parameter_data_str_len(parameter: *const NNModelParameter) -> usize;
}
extern "C" {
    #[doc = " The unique name of the resource as can be used to retrieve the resource using\n @ref nn_model_resource().\n\n @param resource pointer to a @ref NNModelResource retrieved from the model.\n\n @returns A string with the name of the resource.\n @returns NULL if the resource or name is NULL.\n\n @public @memberof NNModelResource\n @since 2.4"]
    pub fn nn_model_resource_name(
        resource: *const NNModelResource,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the meta string for the resource.\n\n @param resource pointer to a @ref NNModelResource retrieved from the model.\n\n @returns A string with the meta parameter of the resource.\n @returns NULL if the resource or meta are NULL.\n\n @public @memberof NNModelResource\n @since 2.4"]
    pub fn nn_model_resource_meta(
        resource: *const NNModelResource,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the mime type string for the resource.\n\n @param resource pointer to a @ref NNModelResource retrieved from the model.\n\n @returns A string with the mime parameter of the resource.\n @returns NULL if the resource or mime are NULL.\n\n @public @memberof NNModelResource\n @since 2.4"]
    pub fn nn_model_resource_mime(
        resource: *const NNModelResource,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Returns the raw binary data for the resource, the size of the data will be\n saved in @p data_size if non-NULL.\n\n @param resource pointer to a @ref NNModelResource retrieved from the model.\n @param data_size optional pointer to a size_t to receive the length in bytes\n of the data, if provided.\n\n @returns pointer to the start of the data stream of length @p data_size.\n @returns NULL if resource has no data associated.\n\n @public @memberof NNModelResource\n @since 2.4"]
    pub fn nn_model_resource_data(
        resource: *const NNModelResource,
        data_size: *mut usize,
    ) -> *const u8;
}
extern "C" {
    #[doc = " Returns the actual size of the context structure.  This size will be smaller\n than @ref NN_CONTEXT_SIZEOF which contains additional padding for future\n extension.  Since @ref nn_context_sizeof() is called dynamically at runtime\n it can return the true and unpadded size.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_sizeof() -> usize;
}
extern "C" {
    #[doc = " Initializes an NNContext and allocates required memories.  If any of the\n pointers are NULL malloc will be called automatically to create the memory\n using the provided sizes.  For memory_size and cache_size if these are 0\n then they will not be initialized.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_init(
        engine: *mut NNEngine,
        memory_size: usize,
        memory: *mut ::std::os::raw::c_void,
        cache_size: usize,
        cache: *mut ::std::os::raw::c_void,
    ) -> *mut NNContext;
}
extern "C" {
    #[doc = " Initializes an NNContext into the provided memory which *MUST* be at least\n NN_CONTEXT_SIZEOF bytes.  If any of the pointers are NULL malloc will be\n called automatically to create the memory using the provided sizes.  For\n memory_size and cache_size if these are 0 then they will not be initialized.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_init_ex(
        context_memory: *mut ::std::os::raw::c_void,
        engine: *mut NNEngine,
        memory_size: usize,
        memory: *mut ::std::os::raw::c_void,
        cache_size: usize,
        cache: *mut ::std::os::raw::c_void,
    ) -> *mut NNContext;
}
extern "C" {
    #[doc = " Release the memory being used by the given context object.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_release(context: *mut NNContext);
}
#[doc = " Callback function for custom user ops.\n\n @public @memberof NNContext\n @since 2.4"]
pub type nn_user_ops = ::std::option::Option<
    unsafe extern "C" fn(
        context: *mut NNContext,
        opname: *const ::std::os::raw::c_char,
        index: usize,
    ) -> NNError,
>;
extern "C" {
    #[doc = " @public @memberof NNContext\n @since 2.4"]
    pub fn nn_context_user_ops_register(context: *mut NNContext, callback: nn_user_ops) -> NNError;
}
extern "C" {
    #[doc = " @public @memberof NNContext\n @since 2.4"]
    pub fn nn_context_user_ops(context: *mut NNContext) -> nn_user_ops;
}
extern "C" {
    #[doc = " @public @memberof NNContext\n @since 2.2"]
    pub fn nn_context_cache(context: *mut NNContext) -> *mut NNTensor;
}
extern "C" {
    #[doc = " @public @memberof NNContext\n @since 2.2"]
    pub fn nn_context_mempool(context: *mut NNContext) -> *mut NNTensor;
}
extern "C" {
    #[doc = " Returns the engine used by the given context object.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_engine(context: *mut NNContext) -> *mut NNEngine;
}
extern "C" {
    #[doc = " Returns the currently loaded model blob for the context.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_model(context: *mut NNContext) -> *const NNModel;
}
extern "C" {
    #[doc = " Loads the model provided by the input into the context.\n\n @context pointer to the context object\n @memory pointer to the memory that contains the model\n @memory_size the size of the memory that is used by the model\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_model_load(
        context: *mut NNContext,
        memory_size: usize,
        memory: *const ::std::os::raw::c_void,
    ) -> NNError;
}
extern "C" {
    #[doc = " Frees the memory used by the model within the given context object.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_model_unload(context: *mut NNContext);
}
extern "C" {
    #[doc = " Returns the tensor with the given name within the model provided by the given\n context object.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_tensor(
        context: *mut NNContext,
        name: *const ::std::os::raw::c_char,
    ) -> *mut NNTensor;
}
extern "C" {
    #[doc = " Returns the tensor at the given index with the model provided by the given\n context object.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_tensor_index(context: *mut NNContext, index: usize) -> *mut NNTensor;
}
extern "C" {
    #[doc = " Runs the model within the given context object.\n\n @public @memberof NNContext\n @since 2.0"]
    pub fn nn_context_run(context: *mut NNContext) -> NNError;
}
extern "C" {
    #[doc = " Runs layer with index from model within the given context object.\n If index is invalid NN_ERROR_INVALID_LAYER is returned, this can be\n used to determine when at the end of the model.\n\n @public @memberof NNContext\n @since 2.3"]
    pub fn nn_context_step(context: *mut NNContext, index: usize) -> NNError;
}
extern "C" {
    #[doc = " Exposes the free() function\n"]
    pub fn nn_free(ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    #[doc = " Exposes the malloc() function\n"]
    pub fn nn_malloc(size: usize) -> *mut ::std::os::raw::c_void;
}
